// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chromium / 1`] = `Array []`;

exports[`chromium /api/button/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /api/select/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/breadcrumbs 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/landmark-unique?application=axeAPI",
    "id": "landmark-unique",
    "nodes": Array [
      "#demo-REMOVED_UNSTABLE_USE_ID_VALUE_FROM_SNAPSHOT > div[role=\\"presentation\\"] > .MuiBreadcrumbs-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiTypography-root-MuiBreadcrumbs-root[aria-label=\\"breadcrumb\\"]",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root.MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/button-group/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/buttons/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/aria-progressbar-name?application=axeAPI",
    "id": "aria-progressbar-name",
    "nodes": Array [
      ".MuiLoadingButton-loadingIndicatorCenter.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiLoadingButton-loadingIndicator.MuiLoadingButton-loadingIndicator > .MuiCircularProgress-root.MuiCircularProgress-indeterminate.MuiCircularProgress-colorInherit",
      ".MuiLoadingButton-loadingIndicatorStart > .MuiCircularProgress-root.MuiCircularProgress-indeterminate.MuiCircularProgress-colorInherit",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/cards/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/checkboxes/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/dialogs/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root.MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/pagination/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/landmark-unique?application=axeAPI",
    "id": "landmark-unique",
    "nodes": Array [
      "#demo-REMOVED_UNSTABLE_USE_ID_VALUE_FROM_SNAPSHOT > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiStack-root > .MuiPagination-text.MuiPagination-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiPagination-root:nth-child(1)",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/pickers 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/radio-buttons 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/rating/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/selects/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/slider 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/aria-valid-attr-value?application=axeAPI",
    "id": "aria-valid-attr-value",
    "nodes": Array [
      "input[aria-label=\\"Small\\\\ steps\\"]",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/label?application=axeAPI",
    "id": "label",
    "nodes": Array [
      ".Mui-disabled.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiSlider-thumb.MuiSlider-thumbSizeMedium > input[aria-valuemax=\\"\\\\31 10\\"][aria-valuemin=\\"\\\\31 0\\"][min=\\"\\\\31 0\\"]",
      "input[value=\\"\\\\31 0\\"][aria-orientation=\\"horizontal\\"][aria-valuemax=\\"\\\\31 00\\"]",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/switches/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/tabs/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/text-fields/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/label?application=axeAPI",
    "id": "label",
    "nodes": Array [
      "#filled-hidden-label-small",
      "#filled-hidden-label-normal",
      ".MuiInputBase-colorSecondary > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiInputBase-input-MuiOutlinedInput-input.MuiOutlinedInput-input[value=\\"\\"]",
      ".MuiInputBase-colorSuccess > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiInputBase-input-MuiFilledInput-input.MuiFilledInput-input[value=\\"\\"]",
      ".MuiInputBase-colorWarning > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiInputBase-input-MuiInput-input.MuiInput-input[value=\\"\\"]",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/tooltips/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/transfer-list 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;

exports[`chromium /components/tree-view/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/list?application=axeAPI",
    "id": "list",
    "nodes": Array [
      ".MuiPaper-elevation0 > div > .MuiList-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiList-root",
    ],
  },
]
`;
